--- a/index.html
+++ b/index.html
@@ -1,1 +1,336 @@
-<h1>BUAH CEMPEDAK BAGUS UNTUK KESEHATAN LAMBUNG</h1>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name='robots' content='index, follow' />
+    <title>profit303 : Login Web Game Buah Cempedak Gacor Di profit 303</title>
+    <meta name="description" content="profit303 berikan jaminan manis game buah Cempedak sejak hari ini, dengan rasa login pengalaman bermain game gacor buah Cempedak terbaik.">
+	<meta name="title" content="profit303 : Login Web Game Buah Cempedak Gacor Di profit 303">
+    <meta name="keywords" content="profit303, daftar profit303, profit303 login , profit303 link, rtp profit303">
+<meta name="google-site-verification" content="hRn7qW7oGLp1rR30XNiXhrdxg1VxAdy4WaQXyehP7pY" />
+	<link rel="amphtml" href="https://buahgab.store/register/?tunnel=profit303" />
+    <link rel="canonical" href="http://profit303-jitu.de-rse.org/">
+    <link rel="shortcut icon" href="https://i.imgur.com/WwVVIIF.png" />
+	<link rel="apple-touch-icon" href="https://i.imgur.com/WwVVIIF.png" />
+	<link rel="alternate" hreflang="id" href="http://profit303-jitu.de-rse.org/">
+
+<script type='application/ld+json'>
+{
+	"@context": "http://schema.org",
+	"@type": "WebSite",
+	"url": "http://profit303-jitu.de-rse.org/",
+	"name": "profit303",
+	"alternateName": "profit303 berikan jaminan manis game buah Cempedak sejak hari ini, dengan rasa login pengalaman bermain game gacor buah Cempedak terbaik.",
+	"potentialAction": {
+		"@type": "SearchAction",
+		"target": "http://profit303-jitu.de-rse.org/search?q={search_term_string}",
+		"query-input": "required maxlength=100 name=search_term_string"
+	}
+}
+</script>
+
+<script type='application/ld+json'>
+{
+	"@context": "http://schema.org",
+	"@type": "Product",
+	"name": "profit303",
+	"url": "http://profit303-jitu.de-rse.org/",
+	"image": "https://i.imgur.com/WwVVIIF.png",
+	"description": "profit303 berikan jaminan manis game buah Cempedak sejak hari ini, dengan rasa login pengalaman bermain game gacor buah Cempedak terbaik.",
+	"brand": {
+		"@type": "Brand",
+		"name": "profit303"
+	},
+	"aggregateRating": {
+		"@type": "AggregateRating",
+		"ratingValue": "5",
+		"reviewCount": "2431620"
+	},
+	"offers": {
+		"@type": "Offer",
+		"priceCurrency": "IDR",
+		"price": "20000",
+		"priceValidUntil": "2023-12-24",
+		"itemCondition": "NewCondition",
+		"availability": "InStock"
+	}
+}
+</script>
+
+<script type='application/ld+json'>
+{
+	"@context": "http://schema.org",
+	"@type": "BreadcrumbList",
+	"itemListElement": [
+		{
+		"@type": "ListItem",
+		"position": "1",
+		"name": "HOME",
+		"item": "http://profit303-jitu.de-rse.org/"
+	},
+		{
+		"@type": "ListItem",
+		"position": "2",
+		"name": "profit303",
+		"item": "http://profit303-jitu.de-rse.org/"
+	},
+		{
+		"@type": "ListItem",
+		"position": "3",
+		"name": "profit303 : Login Web Game Buah Cempedak Gacor Di profit 303",
+		"item": "http://profit303-jitu.de-rse.org/"
+	}
+	]
+}
+</script>
+
+<script type='application/ld+json'>
+{
+	"@context": "http://schema.org",
+	"@type": "Organization",
+	"legalName": "profit303",
+	"url": "http://profit303-jitu.de-rse.org/",
+	"logo": "https://i.imgur.com/WwVVIIF.png",
+	"contactPoint": {
+		"@type": "ContactPoint",
+		"telephone": "+62",
+		"contactType": "whatsapp"
+	},
+	"address": {
+		"@type": "PostalAddress",
+		"streetAddress": "Jakarta",
+		"addressLocality": "Indonesia",
+		"addressRegion": "Indonesia",
+		"postalCode": "76911",
+		"addressCountry": "indonesia"
+	},
+	"sameAs": [
+		"http://profit303-jitu.de-rse.org/",
+		"https://i.imgur.com/WwVVIIF.png"
+	]
+}
+</script>
+
+<script type='application/ld+json'>
+{
+	"@context": "http://schema.org",
+	"@type": "Article",
+	"headline": "profit303 : Login Web Game Buah Cempedak Gacor Di profit 303",
+	"mainEntityOfPage": {
+		"@type": "WebPage",
+		"@id": "http://profit303-jitu.de-rse.org/"
+	},
+	"image": {
+		"@type": "ImageObject",
+		"url": "https://i.imgur.com/WwVVIIF.png",
+		"width": "1000",
+		"height": "800"
+	},
+	"publisher": {
+		"@type": "Organization",
+		"name": "profit303",
+		"logo": {
+			"@type": "ImageObject",
+			"url": "https://i.imgur.com/WwVVIIF.png",
+			"width": "60",
+			"height": "60"
+		}
+	},
+	"datePublished": "2021-03-10",
+	"dateModified": "2021-04-10",
+	"author": {
+		"@type": "Person",
+		"name": "profit303",
+		"url": "http://profit303-jitu.de-rse.org/"
+	},
+	"description": "profit303 berikan jaminan manis game buah Cempedak sejak hari ini, dengan rasa login pengalaman bermain game gacor buah Cempedak terbaik."
+}
+</script>
+
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "Apa Link Login profit303 Terbaru ?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Link akses terbaru login profit303 bisa anda dapatkan melalui tombol daftar dan login diatas untuk menuju ke situs profit303."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Nama Alternatif Link profit303 ?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Untuk link alternatif profit303 juga masih bisa anda dapatkan pada tombol daftar dan login yang tersedia di situs profit303 ini."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Apakah Aman Bermain di Situs profit303 ?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Dengan bermain di profit303 dapat dipastikan bahwa anda bisa bermain dengan aman dan nyaman saat bermain game online di profit303. Karena profit303 merupakan situs online resmi berlisensi terpercaya."
+      }
+    }
+  ]
+}
+</script>
+
+    <style>
+        body {
+            background-color: #333333;
+            font-family: Arial, Helvetica, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #1a3079;
+            color: white;
+            text-align: center;
+            padding: 10px;
+        }
+
+        h1 {
+            text-transform: uppercase;
+            letter-spacing: 5px;
+            background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+            -webkit-background-clip: text;
+            background-size: 1000%;
+            transform-origin: right;
+            color: transparent;
+            animation: profit303 15s linear infinite;
+        }
+
+        @keyframes profit303{
+            0%{
+                background-position: 100% 0%;
+            }
+            50%{
+                background-position: 0% 100%;
+            }
+            100%{
+                background-position: 100% 0%;
+            }
+        }
+
+        main {
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        button {
+            font-family: "Roboto", sans-serif;
+            font-size: 18px;
+            font-weight: bold;
+            background: #111;
+            width: 220px;
+            height: 50px;
+            padding: 5px 20px;
+            margin-left: center;
+            text-align: center;
+            text-decoration: none;
+            text-transform: uppercase;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+            -webkit-transition-duration: 0.3s;
+            transition-duration: 0.3s;
+            -webkit-transition-property: transform;
+            transition-property: transform;
+            outline: none;
+            position: relative;
+            z-index: 0;
+            white-space: nowrap;
+        }
+
+        button:hover, button:focus, button:active {
+            -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+        }
+
+        button::after {
+            z-index: -1;
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: #111;
+            left: 0;
+            top: 0;
+            border-radius: 10px;
+        }
+
+        button::before {
+            content: '';
+            background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+            position: absolute;
+            top: -2px;
+            left: -2px;
+            background-size: 400%;
+            z-index: -1;
+            filter: blur(5px);
+            width: calc(100% + 4px);
+            height: calc(100% + 4px);
+            animation: glowing 20s linear infinite;
+            opacity: 1;
+            transition: opacity .3s ease-in-out;
+            border-radius: 10px;
+        }
+
+        @keyframes glowing {
+            0% {
+                background-position: 0 0;
+            }
+            50% {
+                background-position: 400% 0;
+            }
+            100%{
+                background-position: 0 0;
+            }
+        }
+
+        footer {
+            background-color: #1a3079;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+    
+</head>
+
+<body>
+    <header>
+        <h1 style="font-weight: 900;">profit303 » Game Cakep Paling Mantap Oke Gacor nya</h1>
+    </header>
+    
+    <main>
+        <p>profit303 Alternatif profit303 Login Rtp Live 97,9% Paling enak Anti Rungkad Dan Situs Game Buah Cempedak Terbesar.</p>
+        <a href="https://buahgab.store/register/?tunnel=profit303" target="_blank">
+            <button><b>LOGIN</b></button>
+        </a>
+        <br>
+        <br>
+        <a href="https://buahgab.store/register/?tunnel=profit303" target="_blank">
+            <button><B>DAFTAR</B></button>
+        </a>
+        <br />
+        <h2>profit303 Sebagai Situs Vip di Indonesia</h2>
+        <P>Yang Membuat profit303 Indonesia Semakin ramai Untuk Saat Ini adalah Memberikan Peluang Gembira Untuk Anda di profit303.</p>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 <a href="http://profit303-jitu.de-rse.org/">profit303</a>. All rights reserved.</p>
+    </footer>
+</body>
+</html>
